[metadata]
name = javaMdktCompiler
version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/javaMdktCompiler.py
description = Just python bindings for `org.mdkt.compiler` Java lib allowing to compile and load Java sources in runtime.
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = compile, java, JVM
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
install_requires = 
	JAbs @ git+https://gitlab.com/KOLANICH/JAbs.py
setup_requires = setuptools>=44; wheel; toml; setuptools_scm[toml]>=3.4.3
